--- a/app.json
+++ b/app.json
@@ -1,12 +1,43 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/msg/index",
+    "pages/center/index",
+    "pages/question/index",
+    "pages/my/index",
     "pages/logs/logs"
   ],
+  "tabBar": {
+    "custom":true,
+    "color": "#000000",
+    "selectedColor": "#000000",
+    "backgroundColor": "#000000",
+    "list": [
+      {
+        "pagePath":"pages/index/index",
+        "text":"首页"
+      },
+      {
+        "pagePath": "pages/question/index",
+        "text": "题库"
+      },
+      {
+        "pagePath": "pages/msg/index",
+        "text": "消息"
+      },
+      {
+        "pagePath": "pages/my/index",
+        "text": "我的"
+      }
+    ],
+    "usingComponents": {}
+    
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "云题库",
+    "backgroundColor": "#eeeeee",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
